--- a/resource/charmony-v2.html
+++ b/resource/charmony-v2.html
@@ -196,6 +196,7 @@
             border-bottom: 8px solid #E7E7E7;
             width: 4rem;
             height: 4rem;
+            display: none;
             -webkit-animation: spin 2s linear infinite;
             animation: spin 2s linear infinite;
         }
@@ -210,6 +211,7 @@
             top: calc(50% + 6rem);
             left: calc(50% - 10rem);
             width: 20rem;
+            display: none;
             text-align: center;
             transition: all 0.3s ease-in-out;
         }
@@ -963,6 +965,10 @@
                 overlayLoader.style.display = "none";
                 overlayText.style.top = "50%";
                 overlayText.textContent = jsonData;
+                break;
+            case 'start':
+                overlayLoader.style.display = "block";
+                overlayText.style.display = "block";
                 break;
         }
     });
