--- a/resource/charmony-v3.html
+++ b/resource/charmony-v3.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <iframe id="melody-analysis" scrolling="no" frameBorder="0" src="https://harmonylang.github.io/melody-visualizer/"></iframe>
+    <iframe id="melody-analysis" scrolling="no" frameBorder="0" src="https://harmonylang.dev/melody-visualizer/"></iframe>
 </body>
 
 <script type="text/javascript">
